Electron-ReactTemplate & frontend-backend distinction

--- a/OmnIDEBackend/OmnIDE.csproj
+++ b/OmnIDEBackend/OmnIDE.csproj
@@ -5,11 +5,11 @@
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
-    <SpaRoot>OmnIDEApp\</SpaRoot>
+    <SpaRoot>..\OmnIDEApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
     <SpaProxyServerUrl>https://localhost:44468</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
-    <RootNamespace>ElectronNET___React</RootNamespace>
+    <RootNamespace>OmnIDEBackend</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
