Vite HotReload, TS, TailwindCSS, Config Create

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,61 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
-* text=auto
+* text=auto eol=lf
+
+###############################################################################
+# Auto detect text files and perform LF normalization
+###############################################################################
+# Source code
+*.js    text eol=lf
+*.jsx   text eol=lf
+*.ts    text eol=lf
+*.tsx   text eol=lf
+*.json  text eol=lf
+*.css   text eol=lf
+*.scss  text eol=lf
+*.html  text eol=lf
+*.xml   text eol=lf
+*.svg   text eol=lf
+
+# Documentation
+*.md    text eol=lf
+*.txt   text eol=lf
+*.yaml  text eol=lf
+*.yml   text eol=lf
+
+# Scripts
+*.sh    text eol=lf
+*.bat   text eol=crlf
+*.cmd   text eol=crlf
+*.ps1   text eol=crlf
+
+# Configuration
+.env*             text eol=lf
+.gitattributes    text eol=lf
+.gitignore        text eol=lf
+.editorconfig     text eol=lf
+*.config.js       text eol=lf
+
+###############################################################################
+# Binary files (no line-ending conversion)
+###############################################################################
+*.png binary
+*.jpg binary
+*.gif binary
+*.ico binary
+*.pdf binary
+*.zip binary
+*.7z  binary
+*.ttf binary
+*.eot binary
+*.woff binary
+*.woff2 binary
+
+###############################################################################
+# Electron specific
+###############################################################################
+*.asar binary
 
 ###############################################################################
 # Set default behavior for command prompt diff.
