--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,28 @@
 # Production
 /dist
 /build
-
-# Electron build
 /release
 
-# Misc
-.DS_Store
+# .NET
+bin/
+obj/
+*.user
+*.userosscache
+*.suo
+*.sln.docstates
+*.cache
+
+# IDEs and editors
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -24,18 +40,32 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
 
-# Editor directories and files
-.idea/
-.vscode/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Build results
+[Dd]ebug/
+[Rr]elease/
+x64/
+x86/
+
+# Visual Studio files
+.vs/
+*.user
+*.userosscache
+*.dbmdl
+*.dbproj.schemaview
+*.pfx
+*.publishsettings
+
+# TypeScript
+*.tsbuildinfo
+tsconfig.tsbuildinfo
 
 # Vite
 .vite/
 
-# TypeScript
-*.tsbuildinfo
+# OmniIDE API
+/OmniIDEApi/bin/
+/OmniIDEApi/obj/
+/OmniIDEApi/Properties/
+/OmniIDEApi/**/*.user
