Model-Controller-Repository Implement
Backend - DB Data Handling mechanism is provided by 3 layered structure.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "wait-on": "^8.0.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
