--- a/OmnIDEApi/OmnIDEApi.csproj
+++ b/OmnIDEApi/OmnIDEApi.csproj
@@ -24,4 +24,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="python-embed\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
